// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a loading indicator when talon indicates 1`] = `
<div>
  <span>
    <svg
      fill="none"
      height={64}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={64}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="12"
        x2="12"
        y1="2"
        y2="6"
      />
      <line
        x1="12"
        x2="12"
        y1="18"
        y2="22"
      />
      <line
        x1="4.93"
        x2="7.76"
        y1="4.93"
        y2="7.76"
      />
      <line
        x1="16.24"
        x2="19.07"
        y1="16.24"
        y2="19.07"
      />
      <line
        x1="2"
        x2="6"
        y1="12"
        y2="12"
      />
      <line
        x1="18"
        x2="22"
        y1="12"
        y2="12"
      />
      <line
        x1="4.93"
        x2="7.76"
        y1="19.07"
        y2="16.24"
      />
      <line
        x1="16.24"
        x2="19.07"
        y1="7.76"
        y2="4.93"
      />
    </svg>
  </span>
  <span>
    Fetching Data...
  </span>
</div>
`;

exports[`renders components if cart has items 1`] = `
<div>
  <div>
    <h1>
      Cart
    </h1>
    <button
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <span>
        Sign In
      </span>
    </button>
  </div>
  <div>
    <div>
      <ProductListing
        setIsCartUpdating={[MockFunction]}
      />
    </div>
    <div>
      <PriceAdjustments
        setIsCartUpdating={[MockFunction]}
      />
    </div>
    <div>
      <div>
        <PriceSummary
          isUpdating={false}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders empty cart text (no adjustments, list or summary) if cart is empty 1`] = `
<div>
  <div>
    <h1>
      Cart
    </h1>
    <button
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <span>
        Sign In
      </span>
    </button>
  </div>
  <div>
    <div>
      <h3>
        There are no items in your cart.
      </h3>
    </div>
    <div />
    <div>
      <div />
    </div>
  </div>
</div>
`;
